--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server/index.js",
-    "build": "webpack -d --watch"
+    "build": "webpack -d --watch",
+    "test": "jest --coverage --colors --detectOpenHandles"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -18,6 +19,10 @@
     "postgresql": "^0.0.1"
   },
   "devDependencies": {
+    "babel-jest": "^26.6.3",
+    "chai": "^4.3.4",
+    "mocha": "^8.3.2",
+    "supertest": "^6.1.3",
     "webpack": "^5.26.2",
     "webpack-cli": "^4.5.0"
   }
