--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
+    "newrelic": "^7.1.3",
     "nodemon": "^2.0.7",
     "pg": "^8.5.1",
     "postgresql": "^0.0.1"
